--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,10 @@
   },
   "autoload": {
     "psr-4": {
-      "mix\\": "/"
-    }
+      "mix\\": "src/"
+    },
+    "files": [
+      "src/helpers/Functions.php"
+    ]
   }
 }
