--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "mixstart/framework",
+  "name": "mixstart/mixphp-framework",
   "description": "MixPHP 框架核心 http://www.mixphp.cn",
   "type": "framework",
   "keywords": [
