--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "swoole"
   ],
   "homepage": "http://www.mixphp.cn/",
-  "license": "GPL-2.0",
+  "license": "Apache-2.0",
   "authors": [
     {
       "name": "Jian Liu",
