--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
   ],
   "require": {
     "php": ">=7.0.0",
-    "psr/container": "~1.0"
+    "psr/container": "~1.0",
+    "mix/bean": "v2.1.x-dev"
   },
   "autoload": {
     "psr-4": {
